fix cookie banner z-index

--- a/app/javascript/deltabadger/styles/_styles.scss
+++ b/app/javascript/deltabadger/styles/_styles.scss
@@ -350,6 +350,7 @@ h1 {
   width: 100%;
   bottom: 0;
   left: 0;
+  z-index: 100;
 }
 .cookieConsent {
   background: none !important;
@@ -461,7 +462,7 @@ h1 {
     padding: .5rem 0;
     text-align: right;
     &:first-child {
-      text-align: left;
+      text-alcign: left;
     }
   }
 
